# distill_rl

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
distill_rl/: __init__.py
distill_rl/data/: __init__.py  mnli.py
distill_rl/distillation/: __init__.py  losses.py
distill_rl/grpo/: __init__.py  advantage.py  kdrl.py  loss.py  sampling.py  trrd.py
distill_rl/models/: __init__.py  reference.py  student.py  teacher.py
distill_rl/training/: __init__.py  evaluate.py  grpo_loop.py  supervised.py
distill_rl/utils/: __init__.py  device.py  seed.py  wandb_logger.py
hydra_script/: train.py
hydra_script/configs/: config.yaml
hydra_script/configs/data/: mnli.yaml
hydra_script/configs/distill/: hinton.yaml
hydra_script/configs/grpo/: default.yaml
hydra_script/configs/hydra/launcher/: margaret_submitit.yaml
hydra_script/configs/kdrl/: default.yaml
hydra_script/configs/method/: grpo.yaml  grpo_distill.yaml  kd.yaml  kdrl.yaml  kdrl_anneal.yaml  sft.yaml  trrd.yaml
hydra_script/configs/optimizer/: adamw.yaml
hydra_script/configs/student/: roberta_base.yaml
hydra_script/configs/teacher/: roberta_large_mnli.yaml
hydra_script/configs/trrd/: default.yaml
slurm/: run_all.slurm  run_one.slurm
tests/: test_data.py  test_distillation.py  test_grpo.py  test_kdrl.py  test_models.py  test_trrd.py
